@@ -14,7 +14,7 @@ public:
 
     HANDLE getWaitEvent();
 
-    Result init(DeviceImpl* device, const IFence::Desc& desc);
+    Result init(DeviceImpl* device, const FenceDesc& desc);
 
     virtual SLANG_NO_THROW Result SLANG_MCALL getCurrentValue(uint64_t* outValue) override;
 
