@@ -12,7 +12,7 @@ public:
 
     ~FenceImpl();
 
-    Result init(DeviceImpl* device, const IFence::Desc& desc);
+    Result init(DeviceImpl* device, const FenceDesc& desc);
 
     virtual SLANG_NO_THROW Result SLANG_MCALL getCurrentValue(uint64_t* outValue) override;
 
