@@ -1,3 +1,4 @@
+- rename IFence::Desc -> FenceDesc, add label to FenceDesc
 - implement dynamic rendering in Vulkan
 - remove IFramebuffer and IFramebufferLayout
 - rename IFramebufferLayout::Desc -> FramebufferLayoutDesc
